-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.392 2009-01-14 14:30:57 remko Exp $
-----------------------------------------------------------------------------------------
2009-01-14	remko
	* gmt_init.c:		Fixed some errors in descriptions of -J option
	* explain_-J_short.txt:	---"---

2009-01-12	jluis
	* gmt_plot.c:		Example 8 was crashing with Intel compiled binaries because the
				fno variale in GMT_epsinfo was declared to 5 elements but in cases
				like example08 a fno[5] adress is inquired.

2009-01-12	remko
	* grdview.c:		Made outline part of paint_it(). Significantly shortens PS file
				when plotting mesh.
	* pslib.[ch]:		Significantly simplified the PostScript specification of symbols.
				ps_setfill introduced to set symbol fill and outline.
				Bug fix in ps_bitimage_cmap(): uncolored (B/W) 1-bit images caused
				errors in ghostscript when the pen color was not black; now plots
				using /DeviceGray.
	* gmt_plot.c:		---"---

2009-01-11	pwessel
	* gmt_custom_symbols.conf:	Removed the standard symbols from this list but kept
				the actual custom *.def files for backwards compatibility.

2009-01-11	remko
	* gmt_custom_symbols.conf:	Replaced all "Like -S.. but fillable with pattern" by
				"Same as -S..", since all these symbols are already fillable
	* PSL_prologue.ps:	New implementation of cross (was actually a plus). Introduced
				plus sign. Both are positioned now on the center of the symbol.
	* pslib.[ch]:		Renamed ps_cross to ps_plus. Implemented new ps_cross.
	* gmt_plot.[ch]:	Renamed GMT_cross to GMT_plus. Implemented new GMT_cross.
	* {psxy,psxyz}.{c,txt}:	-Sx now makes a cross (x) not a plus (+). -S+ makes a plus (+).
	* gmt_init.c:		---"---
	* gmt_support.c:	---"---
	* gmt_symbol.h:		---"---
	* *.txt:		Consistent use of OPT(x)

2009-01-10	remko
	* pslib.c, PSL_prologue.ps:	New implementation of code for ellipse (provides
				constant pen width). Changed code for circle and